--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     <input type="text" id="new-task" placeholder="Add a new task">
     <button id="add-task">Add Task</button>
     <ul id="tasks"></ul>
-    <script src="dist/app.js"></script>
+    <script src="../dist/app.js"></script>
 </body>
 </html>
